--- a/static/style.css
+++ b/static/style.css
@@ -186,7 +186,7 @@ footer a:hover {
     background-color: white;
     padding:20%;
 }
-.team_members, .name_rows{
+.team_members, .name_rows, .job_rows{
     display:flex;
     flex-direction: row;
     justify-content: space-around;
@@ -203,5 +203,16 @@ footer a:hover {
     background-color: #fcbcb8;
     padding:1%;
     border-radius: 15px;
-    /* margin: 1% 10% 2% 10%; */
+    width:12%;
+    margin: .5% 0% 0% 0%;
+}
+.job{
+    background-color: #77cece;
+    padding:.5%;
+    width:12%;
+    border-radius: 15px;
+    font-size: 12px;
+    margin: .5% 0% 0% 0%;
+    text-align: center;
+
 }
