--- a/static/style.css
+++ b/static/style.css
@@ -232,3 +232,38 @@ footer a:hover {
     padding: 0px;
 
 }
+/* popup styling */
+.popup{
+    background-color: #FCBCB8;
+    width:60%;
+    border-style: solid;
+    border-width: 20px;
+    border-color: #fcbcb84d;
+
+    border-radius: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 4fr;
+}
+.memberName{
+    background-color: #ee8a8a;
+    width:fit-content;
+    margin:1%;
+    grid-row: 1;
+    grid-column: 1;
+
+}
+.roles{
+    background-color: #f4cecb;
+    width:fit-content;
+    margin:1%;
+    grid-row: 2;
+    grid-column: 1;
+
+}
+.description{
+    background-color: #f4cecb;
+    padding: 20%;
+    grid-row: 3;
+    grid-column: 1;
+}
