--- a/static/style.css
+++ b/static/style.css
@@ -80,6 +80,10 @@ footer a:hover {
     margin-bottom: 1rem;
     text-shadow: 1px 3px 3px rgba(80, 96, 100, 0.209);
 }
+.links a{
+    color: #FFF7F7;
+}
+
 
 .subheader_small {
     font-size: 25px;
@@ -98,8 +102,8 @@ footer a:hover {
 }
 
 .exp_div {
-    background-color: #FBC1BD;
-    color: #FFFFFF;
+    background-color: #f6b7b3;
+    color: #ffffff;
     border-radius: 30px;
     padding: 40px;
     padding-top: 30px;
@@ -180,6 +184,7 @@ footer a:hover {
 .show {
     max-height: 500px;
 }
+
 
 /* Team page css */
 .big_group_picture{
