--- a/static/style.css
+++ b/static/style.css
@@ -246,6 +246,7 @@ footer a:hover {
     margin-right: auto;
     max-width: fit-content;
 }
+/* popup styling */
 
 .team-popup{
     text-align: center;
@@ -264,6 +265,7 @@ footer a:hover {
 
 .team-popup .left {
     padding-top: 40px;
+
 }
 
 .team-popup .name {
@@ -276,6 +278,7 @@ footer a:hover {
     margin-top: 2%;
     margin-left: 5%;
     border-radius: 10px;
+
 }
 
 .team-popup .name.job {
@@ -284,6 +287,7 @@ footer a:hover {
     font-size: 20px;
     width: 20%;
     border: 2px solid white;
+  
 }
 
 .team-popup .description {
@@ -297,44 +301,16 @@ footer a:hover {
     font-size: 20px;
     border-radius: 10px;
     margin-left:5%;
+   
 }
 
 .team-popup .description p {
     padding: 10px;
 }
+.team-popup .personImg{
+    background-color: white;
+    width: 40%;
+    float: right;
+    margin-right: 50px;
 
-/* popup styling */
-.popup{
-    background-color: #FCBCB8;
-    width:60%;
-    border-style: solid;
-    border-width: 20px;
-    border-color: #fcbcb84d;
-
-    border-radius: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 4fr;
-}
-.memberName{
-    background-color: #ee8a8a;
-    width:fit-content;
-    margin:1%;
-    grid-row: 1;
-    grid-column: 1;
-
-}
-.roles{
-    background-color: #f4cecb;
-    width:fit-content;
-    margin:1%;
-    grid-row: 2;
-    grid-column: 1;
-
-}
-.description{
-    background-color: #f4cecb;
-    padding: 20%;
-    grid-row: 3;
-    grid-column: 1;
 }
