pop up styling with image styling

--- a/static/style.css
+++ b/static/style.css
@@ -255,16 +255,20 @@ footer a:hover {
     height: 70vh;
     background-color: #FBC1BD;
     border-radius: 30px;
-    align-items: center;
+    /* align-items: center; */
     position:fixed;
     top:20vh;
     left:30vh;
-    display:none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* display:none; */
     visibility:hidden;
 }
 
 .team-popup .left {
     padding-top: 40px;
+    width: 55%;
 
 }
 
@@ -274,7 +278,7 @@ footer a:hover {
     color: white;
     text-align: center;
     font-size: 25px;
-    width: 25%;
+    width: 70%;
     margin-top: 2%;
     margin-left: 5%;
     border-radius: 10px;
@@ -285,16 +289,17 @@ footer a:hover {
     background-color: #ffffff92;
     color: #EE8A8B;
     font-size: 20px;
-    width: 20%;
+    width: 55%;
+
     border: 2px solid white;
   
 }
 
 .team-popup .description {
-    width: 40%;
+    width: 80%;
     text-align: left;
     float:left;
-    height: 300px;
+    height: 325px;
     background-color: #ffffff82;
     color: #EE8A8B;
     border: 2px solid white;
@@ -307,10 +312,18 @@ footer a:hover {
 .team-popup .description p {
     padding: 10px;
 }
-.team-popup .personImg{
-    background-color: white;
-    width: 40%;
-    float: right;
-    margin-right: 50px;
+.team-popup .right{
+    width: 45%;
+    /* display: flex;
+    justify-content: space-around; */
 
+}
+.team-popup .memberPicture{
+    background-image: url("../static/images/person.png");
+    background-size: cover;
+    margin: 10% 10% 5% 10%;
+    width: 80%;
+    height: 85%;
+    border: 2px solid black; /*change color as needed  */
+    border-radius: 10%;
 }
