--- a/static/style.css
+++ b/static/style.css
@@ -186,12 +186,11 @@ footer a:hover {
 }
 
 .book {
-    margin-left: 50%;
-    margin-top: 30px;
+    margin: 15px auto 40px auto;
     width: fit-content;
     height: 300px;
     position: relative;
-    margin-bottom: 40px;
+    transition: width 0.5s ease;
   }
 
 .pages {
@@ -209,7 +208,7 @@ footer a:hover {
     margin: 0 6px;
     transform-style: preserve-3d;
     transform-origin: left;
-    transition: 0.25s;
+    transition: 0.27s;
     box-shadow: 1px 2px 0 0 rgba(0,0,0,0.15), 1px 3px 1px 0 rgba(0,0,0,0.1);
 }
 
@@ -218,7 +217,7 @@ footer a:hover {
     height: 100%;
     box-sizing: border-box;
     padding: 45px 30px;
-    display: flex;
+    display:flex;
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
@@ -261,7 +260,7 @@ footer a:hover {
     font-size: 14px;
     display: flex;
     flex-direction: column;
-    padding-top: 10px;
+    padding-top: 12px;
   }
 
   .page-footer {
@@ -304,7 +303,7 @@ footer a:hover {
     align-items: center;
     justify-content: space-evenly;
     flex-direction: column;
-    z-index: 9999;
+    z-index: 9998;
   }
 
   .bead {
@@ -324,8 +323,9 @@ footer a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 360px;
-    margin-left: 37%;
+    margin: 360px auto 0px auto;
+    /* margin-left: 37%; */
+    padding-bottom: 10px;
   }
 
   .controls button {
@@ -349,7 +349,7 @@ footer a:hover {
   }
 
  .page-side#highlight {
-    background-color: #FFD972;
+    background-color: #EE8A8B;
  } 
 
  /* Accomplishments for the day */
@@ -389,4 +389,32 @@ footer a:hover {
     padding: 2px;
     padding-left: 5px;
 
+}
+
+.nb-wrapper {
+    background-color:#FFD972;
+    width: auto;
+    height: fit-content;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    padding-top: 1px;
+    border-radius: 36px;
+}
+
+.nb-toc {
+    margin: 20px;
+    float: left;
+    width: 15%;
+}
+
+.nb-toc .toc-list{
+    color: #C5E7E7;
+}
+
+.bookmark {
+    position:absolute;
+    top:0;
+    margin-left: 20px;
+    padding: 0;
 }
