--- a/static/style.css
+++ b/static/style.css
@@ -197,6 +197,14 @@ footer a:hover {
     padding: 30%;
     margin: 2% 0% 0% 0%;
     border-radius: 50%;
+
+    background-image:url("");
+    /* width: 80%; */
+    border: 2px solid lightblue; 
+    /* border-radius: 10%; */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .name{
@@ -317,20 +325,30 @@ footer a:hover {
 
 .team-popup .right{
     width: 40%;
-    height: 70%;
+    height: 90%;
     display: flex;
+  
     justify-content: space-around;
+
 
 }
 .team-popup .memberPicture {
-    align-items: center;
+    /* align-items: center; */
+    background-image:url("");
+    width: 80%;
+    border: 2px solid rgb(255, 255, 255); 
+    border-radius: 10%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
 }
 
-.team-popup .memberPicture img{
+/* .team-popup .memberPicture img{
     right: 30px;
     justify-content: center;
     width: 80%;
     border: 2px solid rgb(255, 255, 255); 
     border-radius: 10%;
-}
+} */
 
