--- a/static/style.css
+++ b/static/style.css
@@ -188,8 +188,15 @@ footer a:hover {
 
 /* Team page css */
 .big_group_picture{
-    background-color: white;
     padding:20%;
+    background-image: url("https://static.igem.wiki/teams/5192/team.png");
+    border: 5px solid rgb(255, 255, 255); 
+    border-radius: 60px;
+    width:60%;
+    margin: auto;
+    /* background-size:cover; */
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .team_image{
